trying to fix wrap for all resources component

--- a/client/src/components/resources/AllResources.css
+++ b/client/src/components/resources/AllResources.css
@@ -14,10 +14,3 @@
     text-align: center;
     padding: 10px;
 }
-
-.card-wrapper {
-    display: flex;
-    flex-direction: wrap;
-    flex-direction: row;
-    justify-content: center;
-}
